--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ h1 {
     margin-top: 100px;
 }
 
+.photographer_section a {
+    text-decoration: none;
+}
+
 .photographer_section article {
     justify-self: center;
     display: flex;
@@ -80,4 +84,16 @@ h1 {
     font-size: 9px;
     font-weight: 400;
     color: #757575;
+}
+
+/* Photograph page */
+.photograph-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.identity {
+    display: flex;
+    flex-direction: column;
 }
