section-card-element : tri des images par l'id et envoie dans cardContainer -> manque css

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -140,3 +140,51 @@ form input {
     display: flex;
     flex-direction: column;
 }
+
+.section-element {
+    width: 90%;
+    margin: 0 100px;
+    margin-top: 30px;
+}
+
+.filter {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.filter p {
+    width: 74px;
+    margin-right: 10px;
+}
+
+.filter ul {
+    width: 170px;
+    height: 170px;
+    list-style-type: none;
+    /* list-style-position: outside; */
+    background-color: #901C1C;
+    border-radius: 5px;
+}
+
+.filter ul li {
+    width: 74px;
+    height: 23px;
+    padding: 15px;
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+ul span {
+    width: 150px;
+    height: 1px;
+    border-color: white;
+}
+
+.section-element img,
+.section-element video {
+    width: 100px;
+    height: auto;
+}
