--- a/css/photographer.css
+++ b/css/photographer.css
@@ -162,9 +162,14 @@ form input {
 }
 
 /* MENU */
+.dropdown-content {
+    background-color: #901C1C;
+}
+
+
 .filter ul {
     width: 170px;
-    height: 170px;
+    height: 61px;
     padding: 0;
     list-style-type: none;
     /* list-style-position: outside; */
@@ -172,11 +177,17 @@ form input {
     border-radius: 5px;
 }
 
-.filter ul li {
+.filter li {
+    padding: 1px;
+    height: 55px;
+}
+
+.filter ul li p {
     width: 74px;
     height: 23px;
-    padding: 15px;
-    padding-top: 18px;
+    /* padding: 15px; */
+    /* padding-top: 18px; */
+    padding-left: 15px;
     color: white;
     font-size: 18px;
     font-weight: 700;
@@ -190,6 +201,46 @@ form input {
     position: relative;
 }
 
+/* Ligne menu */
+
+.line1 {
+    width: 150px;
+    height: 1px;
+    background-color: white;
+    position: absolute;
+    top: 48px;
+    right: 7px;
+}
+
+.line2 {
+    width: 150px;
+    height: 1px;
+    background-color: white;
+    position: absolute;
+    top: 48px;
+    right: 7px;
+}
+
+/* DROPDOWN */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-item {
+    padding: 12px 16px;
+    cursor: pointer;
+}
+
+.open, .close {
+    width: 32px;
+    height: auto;
+    cursor: pointer;
+}
+
 .open,
 .close {
     position: absolute;
@@ -198,27 +249,11 @@ form input {
 }
 
 .open {
+    display: block;
+}
+
+.close {
     display: none;
-}
-
-/* Ligne menu */
-
-.line1 {
-    width: 150px;
-    height: 1px;
-    background-color: white;
-    position: absolute;
-    top: 60px;
-    right: -56px;
-}
-
-.line2 {
-    width: 150px;
-    height: 1px;
-    background-color: white;
-    position: absolute;
-    top: 60px;
-    right: -56px;
 }
 
 .section-element {
