--- a/css/photographer.css
+++ b/css/photographer.css
@@ -236,11 +236,15 @@ form input {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    left: 208px;
 }
 
 .dropdown-item {
     padding: 12px 16px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .open, .close {
@@ -275,7 +279,7 @@ form input {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    justify-content: space-around;
+    margin-top: 20px;
 }
 
 .card-elements {
@@ -289,14 +293,14 @@ form input {
 
 .card-elements img,
 .card-elements video {
-    width: 100%;
+    width: 100% auto;
     height: 100%;
     border-radius: 5px;
     object-fit: cover;
 }
 
 .card-elements div {
-    width: 350px;
+    width: 340px;
     height: 50px;
     padding: 5px;
     display: flex;
@@ -326,6 +330,11 @@ form input {
     height: 24px;
 }
 
+/* .like-all-element {
+    width: 50px;
+    padding-right: 10px;
+} */
+
 
 /* LIGHTBOX */
 
@@ -346,7 +355,7 @@ form input {
     margin: auto;
     padding: 10px;
     width: 80%;
-    max-width: 700px;
+    max-width: 1050px;
     max-height: 900px;
     display: flex;
 }
@@ -355,15 +364,17 @@ form input {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* max-width: 100%; */
-    /* max-height: 80vh; */
     border-radius: 5px;
     padding-bottom: 20px;
+    overflow: hidden;
+    margin-top: 50px;
 }
 
 .lightbox-img, .lightbox-video {
-    width: 100%;
+    width: 80%;
     height: 100%;
+    min-height: 800px;
+    object-fit: cover;
 }
 
 .lightbox-img {
@@ -371,11 +382,11 @@ form input {
 }
 
 .lightbox-title {
-    width: 292px;
+    width: auto;
     height: 31px;
     position: absolute;
     bottom: 20px;
-    left: 20px;
+    left: 115px;
     color: #901C1C;
     font-size: 24px;
     font-weight: 400;
@@ -384,7 +395,7 @@ form input {
 .closeLightbox {
     position: absolute;
     top: 20px;
-    right: 35px;
+    right: 50px;
     cursor: pointer;
 }
 
