--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ h1 {
     margin-right: 100px;
 }
 
+header a {
+    height: 50px;
+    width: auto;
+}
+
 .logo {
     height: 50px;
     margin-left: 100px;
