--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
     margin: 0;
 }
 
+a:focus {
+    background-color: #FAFAFA;
+    outline: 2px solid #FAFAFA;
+}
+
 
 header {
     display: flex;
